--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Mental Health Website</title>
+    
+     <!-- Linking Google Fonts for Icons -->
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
     <style>
       * {
         margin: 0;
